@@ -225,6 +225,23 @@ only a summary).
 any forwarded message so that replies will by default be processed in
 the same way as the original report.
 
+
+<h2>Acknowledgements</h2>
+
+<p>Normally, the $gBug system will return an acknowledgement to you by
+e-mail when you report a new bug or submit additional information to an
+existing bug. If you want to suppress this acknowledgement, include an
+<code>X-Debbugs-No-Ack</code> header in your e-mail (the contents of this
+header do not matter; however, it must be in the mail header and
+<em>not</em> in the pseudo-header with the <code>Package</code> field). If
+you report a new $gBug with this header, you will need to check the web
+interface yourself to find the $gBug number.</p>
+
+<p>Note that this header will not suppress acknowledgements from the
+<code>control\@$gEmailDomain</code> mailserver, since those acknowledgements
+may contain error messages which should be read and acted upon.</p>
+
+
 <h3>$gBug reports against unknown packages</h3>
 
 <p>If the $gBug tracking system doesn't know who the maintainer of the
