@@ -7,6 +7,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
   * Colin Watson:
     - Add (slightly) fancy CGI decoding of message/* MIME types.
     - CGI scripts now support multiple maintainers for a single package.
+    - Add support for an X-Debbugs-No-Ack: mail header to suppress
+      acknowledgements.
 
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
 
